bppackaging/src/objects/Part__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applicable_Tax__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicable Tax</label>
        <referenceTo>Sales_Tax__c</referenceTo>
        <relationshipLabel>Parts</relationshipLabel>
        <relationshipName>Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auto_reorder_Max__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Auto Reorder To</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Auto_reorder_Min__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Auto Reorder At</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AvailableParts__c</fullName>
        <formula>Qty_In_Stock__c -  Qty_Committed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AvailableParts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Cost__c</fullName>
        <label>Average Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Parts</relationshipLabel>
        <relationshipName>Parts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of Part</description>
        <label>Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enviro_Fee__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Environmental Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Is_OrderLot__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is OrderLot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Replaced_Part_Present__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Replaced Part Present</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Counted__c</fullName>
        <label>Last Counted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Sold__c</fullName>
        <label>Last Sold</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Stocked__c</fullName>
        <label>Last Stocked</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSRP__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MSRP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modifed_Time_Stamp__c</fullName>
        <formula>SUBSTITUTE(TEXT(LastModifiedDate), &apos;Z&apos;, &apos;.&apos; + MID(TEXT(MOD(MOD(LastModifiedDate - $System.OriginDateTime, 1), 86400)), 3, 3))</formula>
        <label>Modifed Time Stamp</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order_Lots__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Order Lots</label>
        <precision>16</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Package_Cost__c</fullName>
        <label>Package Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Package_Qty__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Package Qty</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Package_Unit__c</fullName>
        <label>Package Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Packaged_Part__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Packaged Part</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Part_ID__c</fullName>
        <description>Merge of Part Number and Vendor Code</description>
        <formula>Part_Number__c  &amp; Vendor_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Merge of Part Number and Vendor Code</inlineHelpText>
        <label>Part ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Id_Text__c</fullName>
        <externalId>true</externalId>
        <label>Part Id (Text)</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <label>Part Number</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qty_Committed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Qty Committed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qty_In_Stock__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Qty In Stock</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qty_On_Order__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Qty On Order</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Retail_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Retail</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Search_Tags__c</fullName>
        <label>Search Tags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF(Qty_On_Order__c &gt; 0,&apos;On Order&apos;,  IF(AvailableParts__c &gt; 0, &apos;In Stock&apos;, &apos;Out Of Stock&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Superseded_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Replaced By</label>
        <referenceTo>Part__c</referenceTo>
        <relationshipLabel>Parts</relationshipLabel>
        <relationshipName>Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Taxable__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Taxable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendor_Code__c</fullName>
        <formula>Vendor__r.Vendor_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Name_And_Code__c</fullName>
        <formula>Vendor__r.Name &amp; &apos; (&apos; &amp; Vendor__r.Vendor_Code__c &amp; &apos;)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Name And Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Is_Vendor__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Parts</relationshipLabel>
        <relationshipName>Parts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Part</label>
    <listViews>
        <fullName>AG_Bulk_Parts</fullName>
        <columns>NAME</columns>
        <columns>Part_Id_Text__c</columns>
        <columns>Active__c</columns>
        <columns>Vendor__c</columns>
        <columns>Category__c</columns>
        <columns>Status__c</columns>
        <columns>Retail_Price__c</columns>
        <columns>MSRP__c</columns>
        <columns>Part_Number__c</columns>
        <columns>Qty_Committed__c</columns>
        <columns>Qty_In_Stock__c</columns>
        <columns>Search_Tags__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Part_Number__c</field>
            <operation>equals</operation>
            <value>PN-2500</value>
        </filters>
        <label>AG Bulk Parts</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Part_Number__c</columns>
        <columns>Vendor__c</columns>
        <columns>Part_ID__c</columns>
        <columns>MSRP__c</columns>
        <columns>Qty_In_Stock__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P-{00000000}</displayFormat>
        <label>Part Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>